--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      d1st0rt3d sEverian l0g
+      sEverian l0g, dis0rg4niz3d, d1st0rt3d
     </title>
   </head>
   <body>
