--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <title>
       sEverian l0g, dis0rg4niz3d, d1st0rt3d
     </title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        box-sizing: border-box;
+        background: #151515;
+        color: #fb7e14;
+        font-family: sans-serif;
+        font-size: 1vw;
+      }
+    </style>
   </head>
   <body>
     <header>
