--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         font-family: sans-serif;
         font-size: 1vw;
       }
+      body {
+        padding: 1em;
+      }
     </style>
   </head>
   <body>
