--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <title>
       sEverian l0g, dis0rg4niz3d, d1st0rt3d
     </title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <style>
       html, body {
         margin: 0;
@@ -11,7 +15,7 @@
         box-sizing: border-box;
         background: #151515;
         color: #fb7e14;
-        font-family: sans-serif;
+        font-family: 'Work Sans', 'Verdana', sans-serif;
         font-size: 1vw;
       }
       body {
