--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <article>
       <p>
         Writing is a cognitive and social activity involving neuropsychological and physical processes 
-        and the use of writing systems to create persistent representations of human language.
+        and the use of symbols to create persistent representations of human language and therefore thought.
       </p>
       <em>or is it</em>
     </article>
